examples/test/testpolicy15182.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15182
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key30: value8
      key42: value38
      key44: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value7
          key42: value27
          key48: value45
      podSelector:
        matchLabels:
          key22: value43
          key15: value24
